@@ -989,6 +989,14 @@ public:
 			signature += " const";
 		}
 
+		if (do_debug & qtdb_virtual) {
+			printf(	"virtual %p->%s::%s called\n", 
+						ptr,
+						smoke->classes[smoke->methods[method].classId].className,
+						(const char *) signature );
+			fflush(stdout);
+		}
+
 		void * obj = getPointerObject(ptr);
 		smokeqyoto_object *o = value_obj_info(obj);
 
@@ -1006,7 +1014,9 @@ public:
 			void** _o = (void**)args[3].s_voidp;
 			
 			args[0].s_int = qt_metacall(obj, _c, _id, _o);
-			(*FreeGCHandle)(obj);
+
+			// This line stops custom slots from working - how can that be?
+//			(*FreeGCHandle)(obj);
 			return true;
 		}
 		
@@ -1014,14 +1024,6 @@ public:
 		if (overridenMethod == 0) {
 			(*FreeGCHandle)(obj);
 			return false;
-		}
-
-		if (do_debug & qtdb_virtual) {
-			printf(	"virtual %p->%s::%s called\n", 
-						ptr,
-						smoke->classes[smoke->methods[method].classId].className,
-						(const char *) signature );
-			fflush(stdout);
 		}
 
 		VirtualMethodCall c(smoke, method, args, obj, overridenMethod);
